--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <head>
     <title>Pi Remote Control</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='webfonts/fontawesome.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
