make clicks obvious

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,9 @@ $( document ).bind( "mobileinit", function() {
     
     <style>
 circle, text, path {cursor: pointer;}
+svg a { cursor: pointer; }
 svg {width: 100%; height: 100%;}
+svg a:active rect, svg a:active circle { fill: darkgray; }
     </style>
 
 </head>
