Fix arcam remote control name

--- a/templates/control_arcam.html
+++ b/templates/control_arcam.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div data-role="page" data-title="Control" id="control" data-add-back-btn="true">
     <div data-role="header" data-theme="b">
-        <h1>PS3 Remote Control</h1>
+        <h1>ARCAM AVR360 Remote Control</h1>
         <h4>{{d.id}}</h4>
     </div>
 
