--- a/templates/control_arcam.html
+++ b/templates/control_arcam.html
@@ -295,7 +295,7 @@
                     <a onclick="clickedOp('{{ d.id }}', 'KEY_REWIND');">
                         <g transform="translate(20, 0)">
                                 <circle cx="12.5" cy="12.5" r="12.5" fill="black" stroke="gray" />
-                                <text x="12.5" y="11" text-anchor="middle" alignment-baseline="middle" font-size="14" class="fas" fill="white">&#xF048;</text>
+                                <text x="12.5" y="11" text-anchor="middle" alignment-baseline="middle" font-size="14" class="fas" fill="white">&#xF04A;</text>
                                 <text x="12.5" y="-4" text-anchor="middle" alignment-baseline="middle" font-size="8" fill="white">DIRECT</text>
                         </g>
                     </a>
